# sqv

./: .bumpversion.cfg  CLAUDE.md  LICENSE  README.md  pyproject.toml  sample.db
src/sqv/: __init__.py  __main__.py  app.py  db.py
src/sqv/screens/: __init__.py
src/sqv/widgets/: __init__.py  cell_viewer.py  data_viewer.py  sql_editor.py  structure.py
tests/: __init__.py  conftest.py  test_cell_viewer.py  test_data_viewer.py  test_db.py  test_sql_editor.py  test_structure.py
