[project]
name = "sqv"
version = "0.4.1"
description = "A fast, lightweight SQLite database viewer TUI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.89.0",
]

[project.scripts]
sqv = "sqv.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sqv"]

[dependency-groups]
dev = [
    "textual-dev>=1.7.0",
    "ruff>=0.9.0",
    "ty>=0.0.1a6",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "bump2version",
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
